plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
	group = 'com.travel'
	version = '0.0.1-SNAPSHOT'

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(17)
		}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
	}

	dependencyManagement {
		imports {
			mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
		}
	}

	dependencies {
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

		// Global Persistence Stack (Shared by Core, Data, Service, Api)
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		implementation 'org.hibernate.orm:hibernate-spatial'
		implementation 'org.hibernate.common:hibernate-commons-annotations:7.0.3.Final'
		implementation 'com.mysql:mysql-connector-j:9.1.0'
		implementation 'org.springframework.boot:spring-boot-starter-mail'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}
